--- a/index.html
+++ b/index.html
@@ -5,48 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>九州情報大学</title>
   </head>
   <body>
-    <header class="main_header"><h2>九州情報大学</h2></header>
+    <header class="main_header"><h1>九州情報大学</h1></header>
 
     <nav>
       <div class="main_nav">
         <div class="nav_icons">
-          <a href="#"><i class="fas fa-link"></i></a>
-          <span>リンクまとめ</span>
+          <a href="rink.html" target="blank"><i class="fas fa-link"></i></a>
+          <a href="rink.html" target="blank"><span>リンクまとめ</span></a>
         </div>
 
         <div class="nav_icons">
-          <a href="#"><i class="fas fa-bus"></i></a> <span>学校のバス時刻</span>
+          <a href="bus.html" target="blank"><i class="fas fa-bus"></i></a>
+          <a href="bus.html" target="blank"><span>学校のバス時刻</span></a>
         </div>
 
         <div class="nav_icons">
-          <a href="#"><i class="fas fa-graduation-cap"></i></a
-          ><span>学事掲示板</span>
+          <a href="school_keijibang.html" target="blank"
+            ><i class="fas fa-graduation-cap"></i
+          ></a>
+          <a href="school_keijibang.html" target="blank"
+            ><span>学事掲示板</span></a
+          >
         </div>
 
         <div class="nav_icons">
-          <a href="#"><i class="far fa-calendar-alt"></i></a
-          ><span>学校の日程</span>
+          <a href="school_date.html" target="blank"
+            ><i class="far fa-calendar-alt"></i
+          ></a>
+          <a href="school_date.html" target="blank"><span>学校の日程</span></a>
         </div>
 
         <div class="nav_icons">
-          <a href="#"><i class="fas fa-chalkboard"></i></a><span>外部情報</span>
+          <a href="outside_info.html" target="blank"
+            ><i class="fas fa-chalkboard"></i
+          ></a>
+          <a href="outside_info.html" target="blank"><span>外部情報</span></a>
         </div>
 
         <div class="nav_icons">
-          <a href="#"><i class="fas fa-users"></i></a><span>部活管理</span>
+          <a href="club.html" target="blank"><i class="fas fa-users"></i></a>
+          <a href="club.html" target="blank"><span>部活管理</span></a>
         </div>
 
         <div class="nav_icons">
-          <a href="#"><i class="fab fa-discourse"></i></a
-          ><span>授業レビュー</span>
+          <a href="class.html " target="blank"
+            ><i class="fab fa-discourse"></i
+          ></a>
+          <a href="class.html " target="blank"><span>授業レビュー</span></a>
         </div>
 
         <div class="nav_icons">
-          <a href="#"><i class="fas fa-question-circle"></i></a
-          ><span>受験者向き</span>
+          <a href="want_person.html" target="blank"
+            ><i class="fas fa-question-circle"></i
+          ></a>
+          <a href="want_person.html" target="blank"><span>受験者向き</span></a>
         </div>
       </div>
     </nav>
