--- a/class.html
+++ b/class.html
@@ -9,9 +9,22 @@
   </head>
   <body>
     <header class="main_header"><h1>授業レビュー</h1></header>
-    <h2>
-      自分が感じた正直なレビュー！、実時間のアップロードが出来なかったらただ情報だけ載せてもいいかな、、先生方々は見えないようにしたい。
-    </h2>
+    <section>
+      <div class="lesson">
+        <div class="lesson_list">
+          <a href="jitsen.html"> <h2>プログラミング実践Ⅰ:荒平</h2></a>
+          <a href="japan2.html"> <h2>日本語Ⅱ:全창환</h2></a>
+          <a href="basic2.html"> <h2>英会話BASIC：フリン</h2></a>
+          <a href="#"><h2>aaaa</h2></a>
+          <a href="#"><h2>aaaa</h2></a>
+          <a href="#"><h2>aaaa</h2></a>
+          <a href="#"><h2>aaaa</h2></a>
+          <a href="#"><h2>aaaa</h2></a>
+          <a href="#"><h2>aaaa</h2></a>
+          <a href="#"><h2>aaaa</h2></a>
+        </div>
+      </div>
+    </section>
     <script
       src="https://kit.fontawesome.com/ae117ec70d.js"
       crossorigin="anonymous"
