--- a/index.html
+++ b/index.html
@@ -12,57 +12,61 @@
 
     <nav>
       <div class="main_nav">
-        <div class="nav_icons">
-          <a href="rink.html" target="blank"><i class="fas fa-link"></i></a>
-          <a href="rink.html" target="blank"><span>リンクまとめ</span></a>
-        </div>
+        <a href="rink.html" target="blank">
+          <div class="nav-back">
+            <i class="fas fa-link"></i>
+            <span>リンクまとめ</span>
+          </div>
+        </a>
 
-        <div class="nav_icons">
-          <a href="bus.html" target="blank"><i class="fas fa-bus"></i></a>
-          <a href="bus.html" target="blank"><span>学校のバス時刻</span></a>
-        </div>
+        <a href="bus.html" target="blank">
+          <div class="nav-back">
+            <i class="fas fa-bus"></i>
+            <span>学校のバス時刻</span>
+          </div>
+        </a>
 
-        <div class="nav_icons">
-          <a href="school_keijibang.html" target="blank"
-            ><i class="fas fa-graduation-cap"></i
-          ></a>
-          <a href="school_keijibang.html" target="blank"
-            ><span>学事掲示板</span></a
-          >
-        </div>
+        <a href="school_keijibang.html" target="blank">
+          <div class="nav-back">
+            <i class="fas fa-graduation-cap"></i>
+            <span>学事掲示板</span>
+          </div>
+        </a>
 
-        <div class="nav_icons">
-          <a href="school_date.html" target="blank"
-            ><i class="far fa-calendar-alt"></i
-          ></a>
-          <a href="school_date.html" target="blank"><span>学校の日程</span></a>
-        </div>
+        <a href="school_date.html" target="blank">
+          <div class="nav-back">
+            <i class="far fa-calendar-alt"></i>
+            <span>学校の日程</span>
+          </div>
+        </a>
 
-        <div class="nav_icons">
-          <a href="outside_info.html" target="blank"
-            ><i class="fas fa-chalkboard"></i
-          ></a>
-          <a href="outside_info.html" target="blank"><span>外部情報</span></a>
-        </div>
+        <a href="outside_info.html" target="blank">
+          <div class="nav-back">
+            <i class="fas fa-chalkboard"></i>
+            <span>外部情報</span>
+          </div>
+        </a>
 
-        <div class="nav_icons">
-          <a href="club.html" target="blank"><i class="fas fa-users"></i></a>
-          <a href="club.html" target="blank"><span>部活管理</span></a>
-        </div>
+        <a href="club.html" target="blank">
+          <div class="nav-back">
+            <i class="fas fa-users"></i>
+            <span>部活管理</span>
+          </div>
+        </a>
 
-        <div class="nav_icons">
-          <a href="class.html " target="blank"
-            ><i class="fab fa-discourse"></i
-          ></a>
-          <a href="class.html " target="blank"><span>授業レビュー</span></a>
-        </div>
+        <a href="class.html " target="blank">
+          <div class="nav-back">
+            <i class="fab fa-discourse"></i>
+            <span>授業レビュー</span>
+          </div>
+        </a>
 
-        <div class="nav_icons">
-          <a href="want_person.html" target="blank"
-            ><i class="fas fa-question-circle"></i
-          ></a>
-          <a href="want_person.html" target="blank"><span>受験者向き</span></a>
-        </div>
+        <a href="want_person.html" target="blank">
+          <div class="nav-back">
+            <i class="fas fa-question-circle"></i>
+            <span>受験者向き</span>
+          </div>
+        </a>
       </div>
     </nav>
 
