--- a/rink.html
+++ b/rink.html
@@ -8,7 +8,7 @@
     <title>リンクまとめ</title>
   </head>
   <body>
-    <header class="main_header"><h1>リンクまとめ</h1></header>
+    <header class="main_header_link"><h1>リンクまとめ</h1></header>
     <h2>使うリンク全部表示(リンク集)</h2>
     <script
       src="https://kit.fontawesome.com/ae117ec70d.js"
