--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
             <span>受験者向き</span>
           </div>
         </a>
+
+        <a href="want_person.html" target="blank">
+          <div class="nav-back">
+            <i class="fas fa-question-circle"></i>
+            <span>자리채움</span>
+          </div>
+        </a>
       </div>
     </nav>
 
