--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    ㄴ
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -65,6 +66,13 @@
           <div class="nav-back">
             <i class="fas fa-question-circle"></i>
             <span>受験者向き</span>
+          </div>
+        </a>
+
+        <a href="want_person.html" target="blank">
+          <div class="nav-back">
+            <i class="fas fa-question-circle"></i>
+            <span>자리채움</span>
           </div>
         </a>
       </div>
