--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    ㄴ
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,7 +11,7 @@
   <body>
     <header class="main_header"><h1>九州情報大学</h1></header>
 
-    <nav>
+    <nav class="nav-all">
       <div class="main_nav">
         <a href="rink.html" target="blank">
           <div class="nav-back">
