--- a/index3.html
+++ b/index3.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    ㄴ
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +10,7 @@
   <body>
     <header class="main_header"><h1>九州情報大学</h1></header>
 
-    <nav class="nav-all">
+    <nav>
       <div class="main_nav">
         <a href="rink.html" target="blank">
           <div class="nav-back">
