--- a/rink.html
+++ b/rink.html
@@ -9,7 +9,33 @@
   </head>
   <body>
     <header class="main_header_link"><h1>リンクまとめ</h1></header>
-    <h2>使うリンク全部表示(リンク集)</h2>
+    <main class="all-link">
+      <section class="school-link">
+        <div class="link-box">
+          <span class="school-link-title"><h2>学校内のリンク集め</h2></span>
+          <div class="school-link-part">
+            <a href="#"><h3>バス時刻表</h3></a>
+            <a href="https://www.kiis.ac.jp/gakunai/enkaku/"
+              ><h3>
+                授業スケジュール(https://www.kiis.ac.jp/gakunai/enkaku/)
+              </h3></a
+            >
+            <a href="#"><h3>学内公知事項</h3></a>
+          </div>
+        </div>
+      </section>
+
+      <section class="school-link">
+        <div class="link-box">
+          <span class="school-link-title"><h2>外部のリンク集め</h2></span>
+          <div class="school-link-part">
+            <a href="#"><h3>TOICE</h3></a>
+            <a href="#"><h3>JLPT</h3></a>
+            <a href="#"><h3>大会</h3></a>
+          </div>
+        </div>
+      </section>
+    </main>
     <script
       src="https://kit.fontawesome.com/ae117ec70d.js"
       crossorigin="anonymous"
