--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav class="nav-all">
       <div class="main_nav">
-        <a href="rink.html" target="blank">
+        <a href="rink.html">
           <div class="nav-back">
             <i class="fas fa-link"></i>
             <span>リンクまとめ</span>
