--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
           </div>
         </a>
 
-        <a href="want_person.html" target="blank">
-          <div class="nav-back">
-            <i class="fas fa-question-circle"></i>
-            <span>자리채움</span>
+        <a href="index3.html" target="blank">
+          <div class="nav-back dark_mode">
+            <i class="fas fa-lightbulb"></i>
+            <span>DARK MODE</span>
           </div>
         </a>
       </div>
