--- a/index3.html
+++ b/index3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    ㄴ
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,74 +9,75 @@
     <title>九州情報大学</title>
   </head>
   <body>
-    <header class="main_header"><h1>九州情報大学</h1></header>
+    <header class="main_header-2"><h1>九州情報大学</h1></header>
+    <main class="all-main">
+      <nav class="nav-all-2">
+        <div class="main_nav-2">
+          <a href="rink.html">
+            <div class="nav-back_2">
+              <i class="fas fa-link"></i>
+              <span>リンクまとめ</span>
+            </div>
+          </a>
 
-    <nav>
-      <div class="main_nav">
-        <a href="rink.html" target="blank">
-          <div class="nav-back">
-            <i class="fas fa-link"></i>
-            <span>リンクまとめ</span>
-          </div>
-        </a>
+          <a href="bus.html" target="blank">
+            <div class="nav-back_2">
+              <i class="fas fa-bus"></i>
+              <span>学校のバス時刻</span>
+            </div>
+          </a>
 
-        <a href="bus.html" target="blank">
-          <div class="nav-back">
-            <i class="fas fa-bus"></i>
-            <span>学校のバス時刻</span>
-          </div>
-        </a>
+          <a href="school_keijibang.html" target="blank">
+            <div class="nav-back_2">
+              <i class="fas fa-graduation-cap"></i>
+              <span>学事掲示板</span>
+            </div>
+          </a>
 
-        <a href="school_keijibang.html" target="blank">
-          <div class="nav-back">
-            <i class="fas fa-graduation-cap"></i>
-            <span>学事掲示板</span>
-          </div>
-        </a>
+          <a href="school_date.html" target="blank">
+            <div class="nav-back_2">
+              <i class="far fa-calendar-alt"></i>
+              <span>学校の日程</span>
+            </div>
+          </a>
 
-        <a href="school_date.html" target="blank">
-          <div class="nav-back">
-            <i class="far fa-calendar-alt"></i>
-            <span>学校の日程</span>
-          </div>
-        </a>
+          <a href="outside_info.html" target="blank">
+            <div class="nav-back_2">
+              <i class="fas fa-chalkboard"></i>
+              <span>外部情報</span>
+            </div>
+          </a>
 
-        <a href="outside_info.html" target="blank">
-          <div class="nav-back">
-            <i class="fas fa-chalkboard"></i>
-            <span>外部情報</span>
-          </div>
-        </a>
+          <a href="club.html" target="blank">
+            <div class="nav-back_2">
+              <i class="fas fa-users"></i>
+              <span>部活管理</span>
+            </div>
+          </a>
 
-        <a href="club.html" target="blank">
-          <div class="nav-back">
-            <i class="fas fa-users"></i>
-            <span>部活管理</span>
-          </div>
-        </a>
+          <a href="class.html " target="blank">
+            <div class="nav-back_2">
+              <i class="fab fa-discourse"></i>
+              <span>授業レビュー</span>
+            </div>
+          </a>
 
-        <a href="class.html " target="blank">
-          <div class="nav-back">
-            <i class="fab fa-discourse"></i>
-            <span>授業レビュー</span>
-          </div>
-        </a>
+          <a href="want_person.html" target="blank">
+            <div class="nav-back_2">
+              <i class="fas fa-question-circle"></i>
+              <span>受験者向き</span>
+            </div>
+          </a>
 
-        <a href="want_person.html" target="blank">
-          <div class="nav-back">
-            <i class="fas fa-question-circle"></i>
-            <span>受験者向き</span>
-          </div>
-        </a>
-
-        <a href="want_person.html" target="blank">
-          <div class="nav-back">
-            <i class="fas fa-question-circle"></i>
-            <span>자리채움</span>
-          </div>
-        </a>
-      </div>
-    </nav>
+          <a href="index.html" target="blank">
+            <div class="nav-back_2">
+              <i class="fas fa-lightbulb"></i>
+              <span>LIGHT MODE</span>
+            </div>
+          </a>
+        </div>
+      </nav>
+    </main>
 
     <script
       src="https://kit.fontawesome.com/ae117ec70d.js"
