--- a/index.html
+++ b/index.html
@@ -13,56 +13,56 @@
 
     <nav class="nav-all">
       <div class="main_nav">
-        <a href="rink.html">
+        <a href="">
           <div class="nav-back">
             <i class="fas fa-link"></i>
             <span>リンクまとめ</span>
           </div>
         </a>
 
-        <a href="bus.html" target="blank">
+        <a href="" target="blank">
           <div class="nav-back">
             <i class="fas fa-bus"></i>
             <span>学校のバス時刻</span>
           </div>
         </a>
 
-        <a href="school_keijibang.html" target="blank">
+        <a href="" target="blank">
           <div class="nav-back">
             <i class="fas fa-graduation-cap"></i>
             <span>学事掲示板</span>
           </div>
         </a>
 
-        <a href="school_date.html" target="blank">
+        <a href="" target="blank">
           <div class="nav-back">
             <i class="far fa-calendar-alt"></i>
             <span>学校の日程</span>
           </div>
         </a>
 
-        <a href="outside_info.html" target="blank">
+        <a href="" target="blank">
           <div class="nav-back">
             <i class="fas fa-chalkboard"></i>
             <span>外部情報</span>
           </div>
         </a>
 
-        <a href="club.html" target="blank">
+        <a href="" target="blank">
           <div class="nav-back">
             <i class="fas fa-users"></i>
             <span>部活管理</span>
           </div>
         </a>
 
-        <a href="class.html " target="blank">
+        <a href="" target="blank">
           <div class="nav-back">
             <i class="fab fa-discourse"></i>
             <span>授業レビュー</span>
           </div>
         </a>
 
-        <a href="want_person.html" target="blank">
+        <a href="" target="blank">
           <div class="nav-back">
             <i class="fas fa-question-circle"></i>
             <span>受験者向き</span>
