--- a/index3.html
+++ b/index3.html
@@ -13,56 +13,56 @@
     <main class="all-main">
       <nav class="nav-all-2">
         <div class="main_nav-2">
-          <a href="rink.html">
+          <a href="">
             <div class="nav-back_2">
               <i class="fas fa-link"></i>
               <span>リンクまとめ</span>
             </div>
           </a>
 
-          <a href="bus.html" target="blank">
+          <a href="" target="blank">
             <div class="nav-back_2">
               <i class="fas fa-bus"></i>
               <span>学校のバス時刻</span>
             </div>
           </a>
 
-          <a href="school_keijibang.html" target="blank">
+          <a href="" target="blank">
             <div class="nav-back_2">
               <i class="fas fa-graduation-cap"></i>
               <span>学事掲示板</span>
             </div>
           </a>
 
-          <a href="school_date.html" target="blank">
+          <a href="" target="blank">
             <div class="nav-back_2">
               <i class="far fa-calendar-alt"></i>
               <span>学校の日程</span>
             </div>
           </a>
 
-          <a href="outside_info.html" target="blank">
+          <a href="" target="blank">
             <div class="nav-back_2">
               <i class="fas fa-chalkboard"></i>
               <span>外部情報</span>
             </div>
           </a>
 
-          <a href="club.html" target="blank">
+          <a href="" target="blank">
             <div class="nav-back_2">
               <i class="fas fa-users"></i>
               <span>部活管理</span>
             </div>
           </a>
 
-          <a href="class.html " target="blank">
+          <a href=" " target="blank">
             <div class="nav-back_2">
               <i class="fab fa-discourse"></i>
               <span>授業レビュー</span>
             </div>
           </a>
 
-          <a href="want_person.html" target="blank">
+          <a href="" target="blank">
             <div class="nav-back_2">
               <i class="fas fa-question-circle"></i>
               <span>受験者向き</span>
